--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -981,7 +981,9 @@ kvm_arch_vcpu_ioctl_run()                	// vcpu运行
  ├─ vcpu_run()            					// 死循环进入vcpu_enter_guest
  |	├─for(;;)                               // 循环受vcpu_enter_guest()返回值/系统信号控制, 只有异常/有外部信号才退出循环
  |	|   ├─ vcpu_enter_guest()                	// 物理CPU进入guest模式
- |	|	|   ├─ kvm_check_requests()  			// 处理 vcpu->requests, 每个有相应处理
+ |	|	|   ├─ kvm_check_requests()  			// 进入Guest模式前先处理相关挂起的请求(vcpu->requests), 每个有相应处理
+ |	|	|   ├─ (kvm_check_request(KVM_REQ_EVENT, vcpu) || req_int_win)  // 检查是否有事件请求
+ |	|	|   |   ├─ inject_pending_event(vcpu);      // 注入阻塞的事件，中断，异常和nmi等
  |	|	|   ├─ kvm_mmu_reload(vcpu);  			// 加载mmu
  |	|	|   ├─ kvm_x86_ops->prepare_guest_switch(vcpu); // 准备陷入到guest, 保存vmexit时加载的host状态
  |	|	|   ├─ local_irq_disable();  			// 屏蔽中断响应，准备进入guest
@@ -1160,7 +1162,7 @@ static int vcpu_enter_guest(struct kvm_vcpu *vcpu)
         enum exit_fastpath_completion exit_fastpath = EXIT_FASTPATH_NONE;
 
         bool req_immediate_exit = false;
-
+         /*进入Guest模式前先处理相关挂起的请求*/
         if (kvm_request_pending(vcpu)) {
                 if (kvm_check_request(KVM_REQ_GET_VMCS12_PAGES, vcpu)) {
                         if (unlikely(!kvm_x86_ops.get_vmcs12_pages(vcpu))) {
@@ -1168,23 +1170,30 @@ static int vcpu_enter_guest(struct kvm_vcpu *vcpu)
                                 goto out;
                         }
                 }
+                /*卸载MMU*/
                 if (kvm_check_request(KVM_REQ_MMU_RELOAD, vcpu))
                         kvm_mmu_unload(vcpu);
+                /*定时器迁移*/
                 if (kvm_check_request(KVM_REQ_MIGRATE_TIMER, vcpu))
                         __kvm_migrate_timers(vcpu);
+                /*主时钟更新*/
                 if (kvm_check_request(KVM_REQ_MASTERCLOCK_UPDATE, vcpu))
                         kvm_gen_update_masterclock(vcpu->kvm);
+                /*全局时钟更新*/
                 if (kvm_check_request(KVM_REQ_GLOBAL_CLOCK_UPDATE, vcpu))
                         kvm_gen_kvmclock_update(vcpu);
+                /*虚拟机时钟更新*/
                 if (kvm_check_request(KVM_REQ_CLOCK_UPDATE, vcpu)) {
                         r = kvm_guest_time_update(vcpu);
                         if (unlikely(r))
                                 goto out;
                 }
+                /*更新mmu*/
                 if (kvm_check_request(KVM_REQ_MMU_SYNC, vcpu))
                         kvm_mmu_sync_roots(vcpu);
                 if (kvm_check_request(KVM_REQ_LOAD_MMU_PGD, vcpu))
                         kvm_mmu_load_pgd(vcpu);
+                /*刷新TLB*/
                 if (kvm_check_request(KVM_REQ_TLB_FLUSH, vcpu)) {
                         kvm_vcpu_flush_tlb_all(vcpu);
 
@@ -1269,7 +1278,7 @@ static int vcpu_enter_guest(struct kvm_vcpu *vcpu)
                 if (kvm_check_request(KVM_REQ_APICV_UPDATE, vcpu))
                         kvm_vcpu_update_apicv(vcpu);
         }
-
+        //检查是否有事件请求
         if (kvm_check_request(KVM_REQ_EVENT, vcpu) || req_int_win) {
                 ++vcpu->stat.req_event;
                 kvm_apic_accept_events(vcpu);
@@ -1277,7 +1286,7 @@ static int vcpu_enter_guest(struct kvm_vcpu *vcpu)
                         r = 1;
                         goto out;
                 }
-
+                // 注入阻塞的事件，中断，异常和nmi等
                 if (inject_pending_event(vcpu) != 0)
                         req_immediate_exit = true;
                 else {
@@ -1293,6 +1302,186 @@ static int vcpu_enter_guest(struct kvm_vcpu *vcpu)
                          *    inject_pending_event has completed the injection
                          *    of an IRQ or NMI from the previous vmexit, and
                          *    then we request an immediate exit to inject the
+                         *    SMI.
+                         */
+                        if (vcpu->arch.smi_pending && !is_smm(vcpu))
+                                if (!kvm_x86_ops.enable_smi_window(vcpu))
+                                        req_immediate_exit = true;
+                        /* 使能NMI/IRQ window，参见Intel64 System Programming Guide 25.3节（P366）
+                         * 当使能了interrupt-window exiting或NMI-window exiting(由VMCS中相关字段控制)，
+                         * 表示在刚进入虚拟机后，就会立刻因为有pending或注入的中断导致VM-exit
+                         */
+                        if (vcpu->arch.nmi_pending)
+                                kvm_x86_ops.enable_nmi_window(vcpu);
+                        if (kvm_cpu_has_injectable_intr(vcpu) || req_int_win)
+                                kvm_x86_ops.enable_irq_window(vcpu);
+                        WARN_ON(vcpu->arch.exception.pending);
+                }
+
+                if (kvm_lapic_enabled(vcpu)) {
+                        update_cr8_intercept(vcpu);
+                        kvm_lapic_sync_to_vapic(vcpu);
+                }
+        }
+        // 加载MMU
+        r = kvm_mmu_reload(vcpu);
+        if (unlikely(r)) {
+                goto cancel_injection;
+        }
+
+        preempt_disable();
+
+        kvm_x86_ops.prepare_guest_switch(vcpu);
+
+        /*
+         * Disable IRQs before setting IN_GUEST_MODE.  Posted interrupt
+         * IPI are then delayed after guest entry, which ensures that they
+         * result in virtual interrupt delivery.
+         */
+        local_irq_disable();
+        vcpu->mode = IN_GUEST_MODE;
+
+        srcu_read_unlock(&vcpu->kvm->srcu, vcpu->srcu_idx);
+
+        /*
+         * 1) We should set ->mode before checking ->requests.  Please see
+         * the comment in kvm_vcpu_exiting_guest_mode().
+         *
+         * 2) For APICv, we should set ->mode before checking PID.ON. This
+         * pairs with the memory barrier implicit in pi_test_and_set_on
+         * (see vmx_deliver_posted_interrupt).
+         *
+         * 3) This also orders the write to mode from any reads to the page
+         * tables done while the VCPU is running.  Please see the comment
+         * in kvm_flush_remote_tlbs.
+         */
+        smp_mb__after_srcu_read_unlock();
+
+        /*
+         * This handles the case where a posted interrupt was
+         * notified with kvm_vcpu_kick.
+         */
+        if (kvm_lapic_enabled(vcpu) && vcpu->arch.apicv_active)
+                kvm_x86_ops.sync_pir_to_irr(vcpu);
+
+        if (vcpu->mode == EXITING_GUEST_MODE || kvm_request_pending(vcpu)
+            || need_resched() || signal_pending(current)) {
+                vcpu->mode = OUTSIDE_GUEST_MODE;
+                smp_wmb();
+                local_irq_enable();
+                preempt_enable();
+                vcpu->srcu_idx = srcu_read_lock(&vcpu->kvm->srcu);
+                r = 1;
+                goto cancel_injection;
+        }
+
+        if (req_immediate_exit) {
+                kvm_make_request(KVM_REQ_EVENT, vcpu);
+                kvm_x86_ops.request_immediate_exit(vcpu);
+        }
+
+        trace_kvm_entry(vcpu->vcpu_id);
+        guest_enter_irqoff();
+
+        fpregs_assert_state_consistent();
+        if (test_thread_flag(TIF_NEED_FPU_LOAD))
+                switch_fpu_return();
+
+        if (unlikely(vcpu->arch.switch_db_regs)) {
+                set_debugreg(0, 7);
+                set_debugreg(vcpu->arch.eff_db[0], 0);
+                set_debugreg(vcpu->arch.eff_db[1], 1);
+                set_debugreg(vcpu->arch.eff_db[2], 2);
+                set_debugreg(vcpu->arch.eff_db[3], 3);
+                set_debugreg(vcpu->arch.dr6, 6);
+                vcpu->arch.switch_db_regs &= ~KVM_DEBUGREG_RELOAD;
+        }
+
+        kvm_x86_ops.run(vcpu);
+
+        /*
+         * Do this here before restoring debug registers on the host.  And
+         * since we do this before handling the vmexit, a DR access vmexit
+         * can (a) read the correct value of the debug registers, (b) set
+         * KVM_DEBUGREG_WONT_EXIT again.
+         */
+        if (unlikely(vcpu->arch.switch_db_regs & KVM_DEBUGREG_WONT_EXIT)) {
+                WARN_ON(vcpu->guest_debug & KVM_GUESTDBG_USE_HW_BP);
+                kvm_x86_ops.sync_dirty_debug_regs(vcpu);
+                kvm_update_dr0123(vcpu);
+                kvm_update_dr6(vcpu);
+                kvm_update_dr7(vcpu);
+                vcpu->arch.switch_db_regs &= ~KVM_DEBUGREG_RELOAD;
+        }
+
+        /*
+         * If the guest has used debug registers, at least dr7
+         * will be disabled while returning to the host.
+         * If we don't have active breakpoints in the host, we don't
+         * care about the messed up debug address registers. But if
+         * we have some of them active, restore the old state.
+         */
+        if (hw_breakpoint_active())
+                hw_breakpoint_restore();
+
+        vcpu->arch.last_guest_tsc = kvm_read_l1_tsc(vcpu, rdtsc());
+
+        vcpu->mode = OUTSIDE_GUEST_MODE;
+        smp_wmb();
+
+        kvm_x86_ops.handle_exit_irqoff(vcpu, &exit_fastpath);
+
+        /*
+         * Consume any pending interrupts, including the possible source of
+         * VM-Exit on SVM and any ticks that occur between VM-Exit and now.
+         * An instruction is required after local_irq_enable() to fully unblock
+         * interrupts on processors that implement an interrupt shadow, the
+         * stat.exits increment will do nicely.
+         */
+        kvm_before_interrupt(vcpu);
+        local_irq_enable();
+        ++vcpu->stat.exits;
+        local_irq_disable();
+        kvm_after_interrupt(vcpu);
+
+        guest_exit_irqoff();
+        if (lapic_in_kernel(vcpu)) {
+                s64 delta = vcpu->arch.apic->lapic_timer.advance_expire_delta;
+                if (delta != S64_MIN) {
+                        trace_kvm_wait_lapic_expire(vcpu->vcpu_id, delta);
+                        vcpu->arch.apic->lapic_timer.advance_expire_delta = S64_MIN;
+                }
+        }
+
+        local_irq_enable();
+        preempt_enable();
+
+        vcpu->srcu_idx = srcu_read_lock(&vcpu->kvm->srcu);
+
+        /*
+         * Profile KVM exit RIPs:
+         */
+        if (unlikely(prof_on == KVM_PROFILING)) {
+                unsigned long rip = kvm_rip_read(vcpu);
+                profile_hit(KVM_PROFILING, (void *)rip);
+        }
+
+        if (unlikely(vcpu->arch.tsc_always_catchup))
+                kvm_make_request(KVM_REQ_CLOCK_UPDATE, vcpu);
+
+        if (vcpu->arch.apic_attention)
+                kvm_lapic_sync_from_vapic(vcpu);
+
+        r = kvm_x86_ops.handle_exit(vcpu, exit_fastpath);
+        return r;
+
+cancel_injection:
+        kvm_x86_ops.cancel_injection(vcpu);
+        if (unlikely(vcpu->arch.apic_attention))
+                kvm_lapic_sync_from_vapic(vcpu);
+out:
+        return r;
+}
 ```
 
 Guest代码执行到**敏感指令**或因**其他原因**(比如中断/异常)，**VM-Exit退出非根模式**，返回到`vcpu_enter_guest`函数继续执行。
