--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -985,7 +985,7 @@ kvm_arch_vcpu_ioctl_run()                	// vcpu运行
  |	|	|   ├─ (kvm_check_request(KVM_REQ_EVENT, vcpu) || req_int_win)  // 检查是否有事件请求
  |	|	|   |   ├─ inject_pending_event(vcpu);      // 注入阻塞的事件，中断，异常和nmi等
  |	|	|   ├─ kvm_mmu_reload(vcpu);  			// 加载mmu
- |	|	|   ├─ kvm_x86_ops->prepare_guest_switch(vcpu); // 准备陷入到guest, 保存vmexit时加载的host状态
+ |	|	|   ├─ kvm_x86_ops->prepare_guest_switch(vcpu); // // 进入Guest前期准备，架构相关, 准备陷入到guest, 保存vmexit时加载的host状态
  |	|	|   ├─ local_irq_disable();  			// 屏蔽中断响应，准备进入guest
  |	|	|   ├─ vcpu->mode = IN_GUEST_MODE;  		// 将vcpu模式设为guest模式
  |	|	|   ├─ guest_enter_irqoff();  			// 计算虚拟机系统时间和上下文切换
@@ -1330,7 +1330,7 @@ static int vcpu_enter_guest(struct kvm_vcpu *vcpu)
         }
 
         preempt_disable();
-
+        // 进入Guest前期准备，架构相关
         kvm_x86_ops.prepare_guest_switch(vcpu);
 
         /*
@@ -1363,7 +1363,10 @@ static int vcpu_enter_guest(struct kvm_vcpu *vcpu)
          */
         if (kvm_lapic_enabled(vcpu) && vcpu->arch.apicv_active)
                 kvm_x86_ops.sync_pir_to_irr(vcpu);
-
+        /*
+         * 如果VCPU处于EXITING_GUEST_MODE或者vcpu->requests(?)或者需要调度或者
+         * 有挂起的信号，则放弃
+         */
         if (vcpu->mode == EXITING_GUEST_MODE || kvm_request_pending(vcpu)
             || need_resched() || signal_pending(current)) {
                 vcpu->mode = OUTSIDE_GUEST_MODE;
@@ -1374,19 +1377,20 @@ static int vcpu_enter_guest(struct kvm_vcpu *vcpu)
                 r = 1;
                 goto cancel_injection;
         }
-
+        // req_immediate_exit在前面使能NMI/IRQ window失败时设置，此时需要立即退出，触发重新调度
         if (req_immediate_exit) {
                 kvm_make_request(KVM_REQ_EVENT, vcpu);
                 kvm_x86_ops.request_immediate_exit(vcpu);
         }
 
         trace_kvm_entry(vcpu->vcpu_id);
+        // 计算虚拟机的enter时间
         guest_enter_irqoff();
 
         fpregs_assert_state_consistent();
         if (test_thread_flag(TIF_NEED_FPU_LOAD))
                 switch_fpu_return();
-
+        // 调试相关
         if (unlikely(vcpu->arch.switch_db_regs)) {
                 set_debugreg(0, 7);
                 set_debugreg(vcpu->arch.eff_db[0], 0);
@@ -1396,9 +1400,9 @@ static int vcpu_enter_guest(struct kvm_vcpu *vcpu)
                 set_debugreg(vcpu->arch.dr6, 6);
                 vcpu->arch.switch_db_regs &= ~KVM_DEBUGREG_RELOAD;
         }
-
+        // 调用架构相关的run接口(vmx_vcpu_run)，进入Guest模式
         kvm_x86_ops.run(vcpu);
-
+        // 此处开始，说明已经发生了VM-exit，退出了Guest模式
         /*
          * Do this here before restoring debug registers on the host.  And
          * since we do this before handling the vmexit, a DR access vmexit
@@ -1423,9 +1427,9 @@ static int vcpu_enter_guest(struct kvm_vcpu *vcpu)
          */
         if (hw_breakpoint_active())
                 hw_breakpoint_restore();
-
+        /*记录Guest退出前的TSC时钟*/
         vcpu->arch.last_guest_tsc = kvm_read_l1_tsc(vcpu, rdtsc());
-
+        // 设置模式
         vcpu->mode = OUTSIDE_GUEST_MODE;
         smp_wmb();
 
@@ -1443,7 +1447,7 @@ static int vcpu_enter_guest(struct kvm_vcpu *vcpu)
         ++vcpu->stat.exits;
         local_irq_disable();
         kvm_after_interrupt(vcpu);
-
+        // 计算虚拟机的退出时间
         guest_exit_irqoff();
         if (lapic_in_kernel(vcpu)) {
                 s64 delta = vcpu->arch.apic->lapic_timer.advance_expire_delta;
@@ -1452,7 +1456,7 @@ static int vcpu_enter_guest(struct kvm_vcpu *vcpu)
                         vcpu->arch.apic->lapic_timer.advance_expire_delta = S64_MIN;
                 }
         }
-
+        // 开中断
         local_irq_enable();
         preempt_enable();
 
@@ -1460,6 +1464,7 @@ static int vcpu_enter_guest(struct kvm_vcpu *vcpu)
 
         /*
          * Profile KVM exit RIPs:
+         * Profile(采样计数，用于性能分析和调优)相关
          */
         if (unlikely(prof_on == KVM_PROFILING)) {
                 unsigned long rip = kvm_rip_read(vcpu);
@@ -1471,7 +1476,10 @@ static int vcpu_enter_guest(struct kvm_vcpu *vcpu)
 
         if (vcpu->arch.apic_attention)
                 kvm_lapic_sync_from_vapic(vcpu);
-
+        /* 
+         * 调用vmx_handle_exit()处理虚拟机异常，异常原因及其它关键信息
+         * 已经在之前获取。
+         */
         r = kvm_x86_ops.handle_exit(vcpu, exit_fastpath);
         return r;
 
@@ -1490,6 +1498,189 @@ vcpu_enter_guest函数中会判断VM-Exit原因，并进行相应处理。
 
 处理完成后VM-Entry到Guest重新执行Guest代码，或重新等待下次调度。
 
+
+```cpp
+/*
+ * 运行虚拟机，进入Guest模式，即non root模式
+ */
+static void vmx_vcpu_run(struct kvm_vcpu *vcpu)
+{
+        struct vcpu_vmx *vmx = to_vmx(vcpu);
+        unsigned long cr3, cr4;
+        // nmi注入?跟nmi_watchdog相关?
+        /* Record the guest's net vcpu time for enforced NMI injections. */
+        if (unlikely(!enable_vnmi &&
+                     vmx->loaded_vmcs->soft_vnmi_blocked))
+                vmx->loaded_vmcs->entry_time = ktime_get();
+
+        /* Don't enter VMX if guest state is invalid, let the exit handler
+           start emulation until we arrive back to a valid state */
+        if (vmx->emulation_required)
+                return;
+
+        if (vmx->ple_window_dirty) {
+                vmx->ple_window_dirty = false;
+                vmcs_write32(PLE_WINDOW, vmx->ple_window);
+        }
+
+        /*
+         * We did this in prepare_switch_to_guest, because it needs to
+         * be within srcu_read_lock.
+         */
+        WARN_ON_ONCE(vmx->nested.need_vmcs12_to_shadow_sync);
+
+        if (kvm_register_is_dirty(vcpu, VCPU_REGS_RSP))
+                vmcs_writel(GUEST_RSP, vcpu->arch.regs[VCPU_REGS_RSP]);
+        if (kvm_register_is_dirty(vcpu, VCPU_REGS_RIP))
+                vmcs_writel(GUEST_RIP, vcpu->arch.regs[VCPU_REGS_RIP]);
+
+        cr3 = __get_current_cr3_fast();
+        if (unlikely(cr3 != vmx->loaded_vmcs->host_state.cr3)) {
+                vmcs_writel(HOST_CR3, cr3);
+                vmx->loaded_vmcs->host_state.cr3 = cr3;
+        }
+
+        cr4 = cr4_read_shadow();
+        if (unlikely(cr4 != vmx->loaded_vmcs->host_state.cr4)) {
+                vmcs_writel(HOST_CR4, cr4);
+                vmx->loaded_vmcs->host_state.cr4 = cr4;
+        }
+
+        /* When single-stepping over STI and MOV SS, we must clear the
+         * corresponding interruptibility bits in the guest state. Otherwise
+         * vmentry fails as it then expects bit 14 (BS) in pending debug
+         * exceptions being set, but that's not correct for the guest debugging
+         * case. */
+        if (vcpu->guest_debug & KVM_GUESTDBG_SINGLESTEP)
+                vmx_set_interrupt_shadow(vcpu, 0);
+
+        kvm_load_guest_xsave_state(vcpu);
+
+        if (static_cpu_has(X86_FEATURE_PKU) &&
+            kvm_read_cr4_bits(vcpu, X86_CR4_PKE) &&
+            vcpu->arch.pkru != vmx->host_pkru)
+                __write_pkru(vcpu->arch.pkru);
+
+        pt_guest_enter(vmx);
+
+        if (vcpu_to_pmu(vcpu)->version)
+                atomic_switch_perf_msrs(vmx);
+        atomic_switch_umwait_control_msr(vmx);
+
+        if (enable_preemption_timer)
+                vmx_update_hv_timer(vcpu);
+
+        if (lapic_in_kernel(vcpu) &&
+                vcpu->arch.apic->lapic_timer.timer_advance_ns)
+                kvm_wait_lapic_expire(vcpu);
+
+        /*
+         * If this vCPU has touched SPEC_CTRL, restore the guest's value if
+         * it's non-zero. Since vmentry is serialising on affected CPUs, there
+         * is no need to worry about the conditional branch over the wrmsr
+         * being speculatively taken.
+         */
+        x86_spec_ctrl_set_guest(vmx->spec_ctrl, 0);
+
+        /* L1D Flush includes CPU buffer clear to mitigate MDS */
+        if (static_branch_unlikely(&vmx_l1d_should_flush))
+                vmx_l1d_flush(vcpu);
+        else if (static_branch_unlikely(&mds_user_clear))
+                mds_clear_cpu_buffers();
+
+        if (vcpu->arch.cr2 != read_cr2())
+                write_cr2(vcpu->arch.cr2);
+
+        vmx->fail = __vmx_vcpu_run(vmx, (unsigned long *)&vcpu->arch.regs,
+                                   vmx->loaded_vmcs->launched);
+
+        vcpu->arch.cr2 = read_cr2();
+
+        /*
+         * We do not use IBRS in the kernel. If this vCPU has used the
+         * SPEC_CTRL MSR it may have left it on; save the value and
+         * turn it off. This is much more efficient than blindly adding
+         * it to the atomic save/restore list. Especially as the former
+         * (Saving guest MSRs on vmexit) doesn't even exist in KVM.
+         *
+         * For non-nested case:
+         * If the L01 MSR bitmap does not intercept the MSR, then we need to
+         * save it.
+         *
+         * For nested case:
+         * If the L02 MSR bitmap does not intercept the MSR, then we need to
+         * save it.
+         */
+        if (unlikely(!msr_write_intercepted(vcpu, MSR_IA32_SPEC_CTRL)))
+                vmx->spec_ctrl = native_read_msr(MSR_IA32_SPEC_CTRL);
+
+        x86_spec_ctrl_restore_host(vmx->spec_ctrl, 0);
+
+        /* All fields are clean at this point */
+        if (static_branch_unlikely(&enable_evmcs))
+                current_evmcs->hv_clean_fields |=
+                        HV_VMX_ENLIGHTENED_CLEAN_FIELD_ALL;
+
+        if (static_branch_unlikely(&enable_evmcs))
+                current_evmcs->hv_vp_id = vcpu->arch.hyperv.vp_index;
+
+        /* MSR_IA32_DEBUGCTLMSR is zeroed on vmexit. Restore it if needed */
+        if (vmx->host_debugctlmsr)
+                update_debugctlmsr(vmx->host_debugctlmsr);
+
+#ifndef CONFIG_X86_64
+        /*
+         * The sysexit path does not restore ds/es, so we must set them to
+         * a reasonable value ourselves.
+         *
+         * We can't defer this to vmx_prepare_switch_to_host() since that
+         * function may be executed in interrupt context, which saves and
+         * restore segments around it, nullifying its effect.
+         */
+        loadsegment(ds, __USER_DS);
+        loadsegment(es, __USER_DS);
+#endif
+
+        vcpu->arch.regs_avail = ~((1 << VCPU_REGS_RIP) | (1 << VCPU_REGS_RSP)
+                                  | (1 << VCPU_EXREG_RFLAGS)
+                                  | (1 << VCPU_EXREG_PDPTR)
+                                  | (1 << VCPU_EXREG_SEGMENTS)
+                                  | (1 << VCPU_EXREG_CR3));
+        vcpu->arch.regs_dirty = 0;
+
+        pt_guest_exit(vmx);
+
+        /*
+         * eager fpu is enabled if PKEY is supported and CR4 is switched
+         * back on host, so it is safe to read guest PKRU from current
+         * XSAVE.
+         */
+        if (static_cpu_has(X86_FEATURE_PKU) &&
+            kvm_read_cr4_bits(vcpu, X86_CR4_PKE)) {
+                vcpu->arch.pkru = rdpkru();
+                if (vcpu->arch.pkru != vmx->host_pkru)
+                        __write_pkru(vmx->host_pkru);
+        }
+
+        kvm_load_host_xsave_state(vcpu);
+
+        vmx->nested.nested_run_pending = 0;
+        vmx->idt_vectoring_info = 0;
+
+        vmx->exit_reason = vmx->fail ? 0xdead : vmcs_read32(VM_EXIT_REASON);
+        if ((u16)vmx->exit_reason == EXIT_REASON_MCE_DURING_VMENTRY)
+                kvm_machine_check();
+
+        if (vmx->fail || (vmx->exit_reason & VMX_EXIT_REASONS_FAILED_VMENTRY))
+                return;
+
+        vmx->loaded_vmcs->launched = 1;
+        vmx->idt_vectoring_info = vmcs_read32(IDT_VECTORING_INFO_FIELD);
+
+        vmx_recover_nmi_blocking(vmx);
+        vmx_complete_interrupts(vmx);
+}
+```
 
 Guest OS运行在VMX non-root模式中，当执行默写特权执行时，则会引发VM Exit。Guest Exit Reason保存在MSR寄存器中。 `arch/x86/kvm/vmx.c:kvm_vmx_exit_handlers` 定义了guest Exit的**内核处理函数**。 例如 `[EXIT_REASON_CR_ACCESS] = handle_cr`, 当Guest OS访问cr寄存器时，即会产生 VM Exit，将控制权交予kvm，调用`handle_cr`处理。对应到**KVM**就是`vCPU->kvm_run->exit_reason`。KVM根据`exit_reason`做相应的处理。 
 
