--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -1528,9 +1528,10 @@ static void vmx_vcpu_run(struct kvm_vcpu *vcpu)
          * be within srcu_read_lock.
          */
         WARN_ON_ONCE(vmx->nested.need_vmcs12_to_shadow_sync);
-
+        // 写入Guest的RSP寄存器信息至VMCS相关位置中
         if (kvm_register_is_dirty(vcpu, VCPU_REGS_RSP))
                 vmcs_writel(GUEST_RSP, vcpu->arch.regs[VCPU_REGS_RSP]);
+        // 写入Guest的RIP寄存器信息至VMCS相关位置中
         if (kvm_register_is_dirty(vcpu, VCPU_REGS_RIP))
                 vmcs_writel(GUEST_RIP, vcpu->arch.regs[VCPU_REGS_RIP]);
 
@@ -1551,6 +1552,7 @@ static void vmx_vcpu_run(struct kvm_vcpu *vcpu)
          * vmentry fails as it then expects bit 14 (BS) in pending debug
          * exceptions being set, but that's not correct for the guest debugging
          * case. */
+        // 单步调试时，需要禁用Guest中断
         if (vcpu->guest_debug & KVM_GUESTDBG_SINGLESTEP)
                 vmx_set_interrupt_shadow(vcpu, 0);
 
