--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -1592,7 +1592,8 @@ static void vmx_vcpu_run(struct kvm_vcpu *vcpu)
 
         if (vcpu->arch.cr2 != read_cr2())
                 write_cr2(vcpu->arch.cr2);
-
+        // 执行VMLAUNCH指令进入Guest模式，虚拟机开始运行
+        // vmx->loaded_vmcs->launched 表明当前vcpu是否已经vmlaunch
         vmx->fail = __vmx_vcpu_run(vmx, (unsigned long *)&vcpu->arch.regs,
                                    vmx->loaded_vmcs->launched);
 
@@ -1675,7 +1676,7 @@ static void vmx_vcpu_run(struct kvm_vcpu *vcpu)
 
         if (vmx->fail || (vmx->exit_reason & VMX_EXIT_REASONS_FAILED_VMENTRY))
                 return;
-
+        // 设置已经vmlaunch
         vmx->loaded_vmcs->launched = 1;
         vmx->idt_vectoring_info = vmcs_read32(IDT_VECTORING_INFO_FIELD);
 
@@ -1689,3 +1690,149 @@ Guest OS运行在VMX non-root模式中，当执行默写特权执行时，则会
 **VM Exit退出的代码**是`vmx.c:vmx_vcpu_run`函数**后半段开始执行**，执行路径与**vm entry相反**，一层层**回调处理**到qemu-kvm中的`kvm_exec_cpu`
 
 
+```assembly
+/**
+ * __vmx_vcpu_run - Run a vCPU via a transition to VMX guest mode
+ * @vmx:        struct vcpu_vmx * (forwarded to vmx_update_host_rsp)
+ * @regs:       unsigned long * (to guest registers)
+ * @launched:   %true if the VMCS has been launched
+ *
+ * Returns:
+ *      0 on VM-Exit, 1 on VM-Fail
+ */
+SYM_FUNC_START(__vmx_vcpu_run)
+        /*将相关寄存器压栈*/
+        /*BP压栈*/
+        push %_ASM_BP
+        mov  %_ASM_SP, %_ASM_BP
+#ifdef CONFIG_X86_64
+        push %r15
+        push %r14
+        push %r13
+        push %r12
+#else
+        push %edi
+        push %esi
+#endif
+        push %_ASM_BX
+
+        /*
+         * Save @regs, _ASM_ARG2 may be modified by vmx_update_host_rsp() and
+         * @regs is needed after VM-Exit to save the guest's register values.
+         */
+        push %_ASM_ARG2
+
+        /* Copy @launched to BL, _ASM_ARG3 is volatile. */
+        mov %_ASM_ARG3B, %bl
+
+        /* Adjust RSP to account for the CALL to vmx_vmenter(). */
+        lea -WORD_SIZE(%_ASM_SP), %_ASM_ARG2
+        call vmx_update_host_rsp
+
+        /* Load @regs to RAX. */
+        mov (%_ASM_SP), %_ASM_AX
+
+        /* Check if vmlaunch or vmresume is needed */
+        cmpb $0, %bl
+
+        /* Load guest registers.  Don't clobber flags. */
+        mov VCPU_RCX(%_ASM_AX), %_ASM_CX
+        mov VCPU_RDX(%_ASM_AX), %_ASM_DX
+        mov VCPU_RBX(%_ASM_AX), %_ASM_BX
+        mov VCPU_RBP(%_ASM_AX), %_ASM_BP
+        mov VCPU_RSI(%_ASM_AX), %_ASM_SI
+        mov VCPU_RDI(%_ASM_AX), %_ASM_DI
+#ifdef CONFIG_X86_64
+        mov VCPU_R8 (%_ASM_AX),  %r8
+        mov VCPU_R9 (%_ASM_AX),  %r9
+        mov VCPU_R10(%_ASM_AX), %r10
+        mov VCPU_R11(%_ASM_AX), %r11
+        mov VCPU_R12(%_ASM_AX), %r12
+        mov VCPU_R13(%_ASM_AX), %r13
+        mov VCPU_R14(%_ASM_AX), %r14
+        mov VCPU_R15(%_ASM_AX), %r15
+#endif
+        /* Load guest RAX.  This kills the @regs pointer! */
+        mov VCPU_RAX(%_ASM_AX), %_ASM_AX
+
+        /* Enter guest mode */
+        call vmx_vmenter
+
+        /* Jump on VM-Fail. */
+        jbe 2f
+
+        /* Temporarily save guest's RAX. */
+        push %_ASM_AX
+
+        /* Reload @regs to RAX. */
+        mov WORD_SIZE(%_ASM_SP), %_ASM_AX
+
+        /* Save all guest registers, including RAX from the stack */
+        __ASM_SIZE(pop) VCPU_RAX(%_ASM_AX)
+        mov %_ASM_CX,   VCPU_RCX(%_ASM_AX)
+        mov %_ASM_DX,   VCPU_RDX(%_ASM_AX)
+        mov %_ASM_BX,   VCPU_RBX(%_ASM_AX)
+        mov %_ASM_BP,   VCPU_RBP(%_ASM_AX)
+        mov %_ASM_SI,   VCPU_RSI(%_ASM_AX)
+        mov %_ASM_DI,   VCPU_RDI(%_ASM_AX)
+#ifdef CONFIG_X86_64
+        mov %r8,  VCPU_R8 (%_ASM_AX)
+        mov %r9,  VCPU_R9 (%_ASM_AX)
+        mov %r10, VCPU_R10(%_ASM_AX)
+        mov %r11, VCPU_R11(%_ASM_AX)
+        mov %r12, VCPU_R12(%_ASM_AX)
+        mov %r13, VCPU_R13(%_ASM_AX)
+        mov %r14, VCPU_R14(%_ASM_AX)
+        mov %r15, VCPU_R15(%_ASM_AX)
+#endif
+
+        /* Clear RAX to indicate VM-Exit (as opposed to VM-Fail). */
+        xor %eax, %eax
+
+        /*
+         * Clear all general purpose registers except RSP and RAX to prevent
+         * speculative use of the guest's values, even those that are reloaded
+         * via the stack.  In theory, an L1 cache miss when restoring registers
+         * could lead to speculative execution with the guest's values.
+         * Zeroing XORs are dirt cheap, i.e. the extra paranoia is essentially
+         * free.  RSP and RAX are exempt as RSP is restored by hardware during
+         * VM-Exit and RAX is explicitly loaded with 0 or 1 to return VM-Fail.
+         */
+1:      xor %ecx, %ecx
+        xor %edx, %edx
+        xor %ebx, %ebx
+        xor %ebp, %ebp
+        xor %esi, %esi
+        xor %edi, %edi
+#ifdef CONFIG_X86_64
+        xor %r8d,  %r8d
+        xor %r9d,  %r9d
+        xor %r10d, %r10d
+        xor %r11d, %r11d
+        xor %r12d, %r12d
+        xor %r13d, %r13d
+        xor %r14d, %r14d
+        xor %r15d, %r15d
+#endif
+
+        /* "POP" @regs. */
+        add $WORD_SIZE, %_ASM_SP
+        pop %_ASM_BX
+
+#ifdef CONFIG_X86_64
+        pop %r12
+        pop %r13
+        pop %r14
+        pop %r15
+#else
+        pop %esi
+        pop %edi
+#endif
+        pop %_ASM_BP
+        ret
+
+        /* VM-Fail.  Out-of-line to avoid a taken Jcc after VM-Exit. */
+2:      mov $1, %eax
+        jmp 1b
+SYM_FUNC_END(__vmx_vcpu_run)
+```
