--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -1593,6 +1593,7 @@ static void vmx_vcpu_run(struct kvm_vcpu *vcpu)
         if (vcpu->arch.cr2 != read_cr2())
                 write_cr2(vcpu->arch.cr2);
         // 执行VMLAUNCH指令进入Guest模式，虚拟机开始运行
+        // &vcpu->arch.regs 用来在vm退出后保存guest寄存器的值
         // vmx->loaded_vmcs->launched 表明当前vcpu是否已经vmlaunch
         vmx->fail = __vmx_vcpu_run(vmx, (unsigned long *)&vcpu->arch.regs,
                                    vmx->loaded_vmcs->launched);
@@ -1721,7 +1722,7 @@ SYM_FUNC_START(__vmx_vcpu_run)
          * @regs is needed after VM-Exit to save the guest's register values.
          */
         push %_ASM_ARG2
-
+        // 拷贝 @launched
         /* Copy @launched to BL, _ASM_ARG3 is volatile. */
         mov %_ASM_ARG3B, %bl
 
@@ -1731,7 +1732,7 @@ SYM_FUNC_START(__vmx_vcpu_run)
 
         /* Load @regs to RAX. */
         mov (%_ASM_SP), %_ASM_AX
-
+        /*判断vcpu_vmx->__launched，确认是否需要执行VMLAUNCH*/
         /* Check if vmlaunch or vmresume is needed */
         cmpb $0, %bl
 
