--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -1703,8 +1703,9 @@ Guest OS运行在VMX non-root模式中，当执行默写特权执行时，则会
  */
 SYM_FUNC_START(__vmx_vcpu_run)
         /*将相关寄存器压栈*/
-        /*BP压栈*/
+        /*BP压栈, 栈底指针寄存器压栈保存*/
         push %_ASM_BP
+        // 栈底和栈顶一致, 将
         mov  %_ASM_SP, %_ASM_BP
 #ifdef CONFIG_X86_64
         push %r15
