--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -1703,10 +1703,12 @@ Guest OS运行在VMX non-root模式中，当执行默写特权执行时，则会
  */
 SYM_FUNC_START(__vmx_vcpu_run)
         /*将相关寄存器压栈*/
-        /*BP压栈, 栈底指针寄存器压栈保存*/
+        /* RBP压栈, 栈底指针寄存器压栈保存*/
         push %_ASM_BP
-        // 栈底和栈顶一致, 将
+        // 将栈顶设为栈底, 所以栈底和栈顶指针相等了, 不会影响以前栈的数据
         mov  %_ASM_SP, %_ASM_BP
+        // %rbx，%rbp，%r12，%r13，%14，%15 都是数据存储寄存器
+        // 被调用者随便用, 在调用子函数之前要备份它，以防他被修改
 #ifdef CONFIG_X86_64
         push %r15
         push %r14
@@ -1716,6 +1718,7 @@ SYM_FUNC_START(__vmx_vcpu_run)
         push %edi
         push %esi
 #endif
+        // RBX寄存器压栈
         push %_ASM_BX
 
         /*
