--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -1725,6 +1725,7 @@ SYM_FUNC_START(__vmx_vcpu_run)
          * Save @regs, _ASM_ARG2 may be modified by vmx_update_host_rsp() and
          * @regs is needed after VM-Exit to save the guest's register values.
          */
+        // 保存虚拟机vcpu寄存器
         push %_ASM_ARG2
         // 拷贝 @launched
         /* Copy @launched to BL, _ASM_ARG3 is volatile. */
