--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -1727,21 +1727,24 @@ SYM_FUNC_START(__vmx_vcpu_run)
          */
         // 保存虚拟机vcpu寄存器
         push %_ASM_ARG2
-        // 拷贝 @launched
+        // 拷贝 @launched到bl
         /* Copy @launched to BL, _ASM_ARG3 is volatile. */
         mov %_ASM_ARG3B, %bl
 
         /* Adjust RSP to account for the CALL to vmx_vmenter(). */
         lea -WORD_SIZE(%_ASM_SP), %_ASM_ARG2
+        // 更新host rsp, vmcs_write
         call vmx_update_host_rsp
 
         /* Load @regs to RAX. */
+        // 将vcpu寄存器复制给RAX
         mov (%_ASM_SP), %_ASM_AX
         /*判断vcpu_vmx->__launched，确认是否需要执行VMLAUNCH*/
         /* Check if vmlaunch or vmresume is needed */
         cmpb $0, %bl
 
         /* Load guest registers.  Don't clobber flags. */
+        /*加载guest寄存器*/
         mov VCPU_RCX(%_ASM_AX), %_ASM_CX
         mov VCPU_RDX(%_ASM_AX), %_ASM_DX
         mov VCPU_RBX(%_ASM_AX), %_ASM_BX
@@ -1841,4 +1844,38 @@ SYM_FUNC_START(__vmx_vcpu_run)
 2:      mov $1, %eax
         jmp 1b
 SYM_FUNC_END(__vmx_vcpu_run)
+
+/**
+ * vmx_vmenter - VM-Enter the current loaded VMCS
+ *
+ * %RFLAGS.ZF:  !VMCS.LAUNCHED, i.e. controls VMLAUNCH vs. VMRESUME
+ *
+ * Returns:
+ *      %RFLAGS.CF is set on VM-Fail Invalid
+ *      %RFLAGS.ZF is set on VM-Fail Valid
+ *      %RFLAGS.{CF,ZF} are cleared on VM-Success, i.e. VM-Exit
+ *
+ * Note that VMRESUME/VMLAUNCH fall-through and return directly if
+ * they VM-Fail, whereas a successful VM-Enter + VM-Exit will jump
+ * to vmx_vmexit.
+ */
+SYM_FUNC_START(vmx_vmenter)
+        /* EFLAGS.ZF is set if VMCS.LAUNCHED == 0 */
+        je 2f
+
+1:      vmresume
+        ret
+
+2:      vmlaunch
+        ret
+
+3:      cmpb $0, kvm_rebooting
+        je 4f
+        ret
+4:      ud2
+
+        _ASM_EXTABLE(1b, 3b)
+        _ASM_EXTABLE(2b, 3b)
+
+SYM_FUNC_END(vmx_vmenter)
 ```
