--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -1733,7 +1733,7 @@ SYM_FUNC_START(__vmx_vcpu_run)
 
         /* Adjust RSP to account for the CALL to vmx_vmenter(). */
         lea -WORD_SIZE(%_ASM_SP), %_ASM_ARG2
-        // 更新host rsp, vmcs_write
+        // 此时还未进入guest模式, 更新host rsp, vmcs_write, 见下面
         call vmx_update_host_rsp
 
         /* Load @regs to RAX. */
@@ -1765,6 +1765,7 @@ SYM_FUNC_START(__vmx_vcpu_run)
         mov VCPU_RAX(%_ASM_AX), %_ASM_AX
 
         /* Enter guest mode */
+        // 进入guest模式, 见下面
         call vmx_vmenter
 
         /* Jump on VM-Fail. */
@@ -1845,6 +1846,14 @@ SYM_FUNC_START(__vmx_vcpu_run)
         jmp 1b
 SYM_FUNC_END(__vmx_vcpu_run)
 
+void vmx_update_host_rsp(struct vcpu_vmx *vmx, unsigned long host_rsp)
+{
+        if (unlikely(host_rsp != vmx->loaded_vmcs->host_state.rsp)) {
+                vmx->loaded_vmcs->host_state.rsp = host_rsp;
+                vmcs_writel(HOST_RSP, host_rsp);
+        }
+}
+
 /**
  * vmx_vmenter - VM-Enter the current loaded VMCS
  *
@@ -1862,7 +1871,7 @@ SYM_FUNC_END(__vmx_vcpu_run)
 SYM_FUNC_START(vmx_vmenter)
         /* EFLAGS.ZF is set if VMCS.LAUNCHED == 0 */
         je 2f
-
+        // 如果已经曾经加载过VM了，执行VMRESUME指令，快速重新启动VM
 1:      vmresume
         ret
 
