--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -1769,6 +1769,7 @@ SYM_FUNC_START(__vmx_vcpu_run)
         call vmx_vmenter
 
         /* Jump on VM-Fail. */
+        // 无符号小于等于则跳转
         jbe 2f
 
         /* Temporarily save guest's RAX. */
@@ -1870,6 +1871,7 @@ void vmx_update_host_rsp(struct vcpu_vmx *vmx, unsigned long host_rsp)
  */
 SYM_FUNC_START(vmx_vmenter)
         /* EFLAGS.ZF is set if VMCS.LAUNCHED == 0 */
+        // 等于则跳转
         je 2f
         // 如果已经曾经加载过VM了，执行VMRESUME指令，快速重新启动VM
 1:      vmresume
