--- Auto-Git Commit ---

--- a/Architecture/Assembly/跳转指令.md
+++ b/Architecture/Assembly/跳转指令.md
@@ -53,17 +53,282 @@ JPO  ;奇偶位不等则跳转
 
 跳转相关的标志位:
 
-11	10	9	8	7	6	5	4	3	2	1	0
-OF	DF	IF	TF	SF	ZF	　	AF	　	PF	　	CF
-溢出	　	　	　	符
-号	零	未
-用	辅
-助	未
-用	奇
-偶	未
-用	进
-位
+11  | 10 | 9  | 8  | 7  | 6  | 5  | 4  | 3  | 2  | 1  | 0
+----|----|----|----|----|----|----|----|----|----|----|---
+OF  | DF | IF | TF | SF | ZF |    | AF |    | PF |    | CF
+溢出 | 　 |    |    |符号 |	零 |未用 |辅助 |未用|奇偶 |未用 |进位
 
+JMP 测试
+; Test28_1.asm;
+.386
+.model flat, stdcall
+
+include    windows.inc
+include    kernel32.inc
+include    masm32.inc
+include    debug.inc
+includelib kernel32.lib
+includelib masm32.lib
+includelib debug.lib
+
+.code
+main proc
+    PrintText '1'
+    jmp @F
+    PrintText '2'
+    PrintText '3'
+@@: PrintText '4'
+    ret
+main endp
+end main
+
+;测试结果应该是:
+;1
+;4
+;以下都应该是这样.
+
+
+JE 测试
+; Test28_2.asm;
+.386
+.model flat, stdcall
+
+include    windows.inc
+include    kernel32.inc
+include    masm32.inc
+include    debug.inc
+includelib kernel32.lib
+includelib masm32.lib
+includelib debug.lib
+
+.code
+main proc
+    PrintText '1'
+    mov eax, 123
+    cmp eax, 123
+    je @F
+    PrintText '2'
+    PrintText '3'
+@@: PrintText '4'
+    ret
+main endp
+end main
+
+
+JZ 测试
+; Test28_3.asm;
+.386
+.model flat, stdcall
+
+include    windows.inc
+include    kernel32.inc
+include    masm32.inc
+include    debug.inc
+includelib kernel32.lib
+includelib masm32.lib
+includelib debug.lib
+
+.code
+main proc
+    PrintText '1'
+    xor eax, eax
+    jz @F
+    PrintText '2'
+    PrintText '3'
+@@: PrintText '4'
+    ret
+main endp
+end main
+
+
+JS 测试
+; Test28_4.asm;
+.386
+.model flat, stdcall
+
+include    windows.inc
+include    kernel32.inc
+include    masm32.inc
+include    debug.inc
+includelib kernel32.lib
+includelib masm32.lib
+includelib debug.lib
+
+.code
+main proc
+    PrintText '1'
+    xor eax, eax
+    dec eax
+    js @F
+    PrintText '2'
+    PrintText '3'
+@@: PrintText '4'
+    ret
+main endp
+end main
+
+
+
+JC 测试
+; Test28_5.asm;
+.386
+.model flat, stdcall
+
+include    windows.inc
+include    kernel32.inc
+include    masm32.inc
+include    debug.inc
+includelib kernel32.lib
+includelib masm32.lib
+includelib debug.lib
+
+.code
+main proc
+    PrintText '1'
+    mov al, 0FFh
+    add al, 1
+    jc @F
+    PrintText '2'
+    PrintText '3'
+@@: PrintText '4'
+    ret
+main endp
+end main
+
+
+JO 测试
+; Test28_6.asm;
+.386
+.model flat, stdcall
+
+include    windows.inc
+include    kernel32.inc
+include    masm32.inc
+include    debug.inc
+includelib kernel32.lib
+includelib masm32.lib
+includelib debug.lib
+
+.code
+main proc
+    PrintText '1'
+    mov al, -128
+    sub al, 1
+    jo @F
+    PrintText '2'
+    PrintText '3'
+@@: PrintText '4'
+    ret
+main endp
+end main
+
+
+JA 测试
+; Test28_7.asm;
+.386
+.model flat, stdcall
+
+include    windows.inc
+include    kernel32.inc
+include    masm32.inc
+include    debug.inc
+includelib kernel32.lib
+includelib masm32.lib
+includelib debug.lib
+
+.code
+main proc
+    PrintText '1'
+    mov eax, 22
+    cmp eax, 11
+    ja @F
+    PrintText '2'
+    PrintText '3'
+@@: PrintText '4'
+    ret
+main endp
+end main
+
+
+JG 测试
+; Test28_8.asm;
+.386
+.model flat, stdcall
+
+include    windows.inc
+include    kernel32.inc
+include    masm32.inc
+include    debug.inc
+includelib kernel32.lib
+includelib masm32.lib
+includelib debug.lib
+
+.code
+main proc
+    PrintText '1'
+    mov eax, 1
+    cmp eax, -1
+    jg @F
+    PrintText '2'
+    PrintText '3'
+@@: PrintText '4'
+    ret
+main endp
+end main
+
+
+JP 测试
+; Test28_9.asm;
+.386
+.model flat, stdcall
+
+include    windows.inc
+include    kernel32.inc
+include    masm32.inc
+include    debug.inc
+includelib kernel32.lib
+includelib masm32.lib
+includelib debug.lib
+
+.code
+main proc
+    PrintText '1'
+    mov al, 00001110b
+    inc al
+    jp @F
+    PrintText '2'
+    PrintText '3'
+@@: PrintText '4'
+    ret
+main endp
+end main
+
+
+JECXZ 测试
+
+; Test28_10.asm;
+.386
+.model flat, stdcall
+
+include    windows.inc
+include    kernel32.inc
+include    masm32.inc
+include    debug.inc
+includelib kernel32.lib
+includelib masm32.lib
+includelib debug.lib
+
+.code
+main proc
+    PrintText '1'
+    xor ecx, ecx
+    jecxz @F
+    PrintText '2'
+    PrintText '3'
+@@: PrintText '4'
+    ret
+main endp
+end main
 
 # 参考
 
