--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -1871,7 +1871,7 @@ void vmx_update_host_rsp(struct vcpu_vmx *vmx, unsigned long host_rsp)
  */
 SYM_FUNC_START(vmx_vmenter)
         /* EFLAGS.ZF is set if VMCS.LAUNCHED == 0 */
-        // 等于则跳转
+        // 检查ZF, zf等于0(即第一次)则跳转执行vmlaunch
         je 2f
         // 如果已经曾经加载过VM了，执行VMRESUME指令，快速重新启动VM
 1:      vmresume
