--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -1771,7 +1771,7 @@ SYM_FUNC_START(__vmx_vcpu_run)
         /* Jump on VM-Fail. */
         // 无符号小于等于则跳转
         jbe 2f
-
+        // 暂时存储虚拟机RAX寄存器
         /* Temporarily save guest's RAX. */
         push %_ASM_AX
 
