--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -1769,7 +1769,8 @@ SYM_FUNC_START(__vmx_vcpu_run)
         call vmx_vmenter
 
         /* Jump on VM-Fail. */
-        // 无符号小于等于则跳转
+        // 无符号小于等于则跳转, VM-Fail则不保存虚拟机寄存器
+        // 因为VM-Fail表明没有执行任何虚拟机指令
         jbe 2f
         // 暂时存储虚拟机RAX寄存器
         /* Temporarily save guest's RAX. */
@@ -1777,7 +1778,7 @@ SYM_FUNC_START(__vmx_vcpu_run)
 
         /* Reload @regs to RAX. */
         mov WORD_SIZE(%_ASM_SP), %_ASM_AX
-
+        // 保存所有虚拟机寄存器
         /* Save all guest registers, including RAX from the stack */
         __ASM_SIZE(pop) VCPU_RAX(%_ASM_AX)
         mov %_ASM_CX,   VCPU_RCX(%_ASM_AX)
@@ -1843,6 +1844,7 @@ SYM_FUNC_START(__vmx_vcpu_run)
         ret
 
         /* VM-Fail.  Out-of-line to avoid a taken Jcc after VM-Exit. */
+        // VM-Fail 直接到这里
 2:      mov $1, %eax
         jmp 1b
 SYM_FUNC_END(__vmx_vcpu_run)
