--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -1762,6 +1762,7 @@ SYM_FUNC_START(__vmx_vcpu_run)
         mov VCPU_R15(%_ASM_AX), %r15
 #endif
         /* Load guest RAX.  This kills the @regs pointer! */
+        // 加载guest rax寄存器
         mov VCPU_RAX(%_ASM_AX), %_ASM_AX
 
         /* Enter guest mode */
