--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -1779,7 +1779,7 @@ SYM_FUNC_START(__vmx_vcpu_run)
 
         /* Reload @regs to RAX. */
         mov WORD_SIZE(%_ASM_SP), %_ASM_AX
-        // 保存所有虚拟机寄存器
+        // 保存所有虚拟机寄存器到vcpu
         /* Save all guest registers, including RAX from the stack */
         __ASM_SIZE(pop) VCPU_RAX(%_ASM_AX)
         mov %_ASM_CX,   VCPU_RCX(%_ASM_AX)
