--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -1732,7 +1732,7 @@ SYM_FUNC_START(__vmx_vcpu_run)
         mov %_ASM_ARG3B, %bl
 
         /* Adjust RSP to account for the CALL to vmx_vmenter(). */
-        // 将RSP的
+        // 调整RSP, 将vcpu寄存器内存地址给rsp
         lea -WORD_SIZE(%_ASM_SP), %_ASM_ARG2
         // 此时还未进入guest模式, 更新host rsp, vmcs_write, 见下面
         call vmx_update_host_rsp
