--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -1734,7 +1734,7 @@ SYM_FUNC_START(__vmx_vcpu_run)
         /* Adjust RSP to account for the CALL to vmx_vmenter(). */
         // 调整RSP, 将vcpu寄存器内存地址给rsp
         lea -WORD_SIZE(%_ASM_SP), %_ASM_ARG2
-        // 此时还未进入guest模式, 更新host rsp, vmcs_write, 见下面
+        // 此时还未进入guest模式, 会更新host rsp, vmcs_write, 见下面
         call vmx_update_host_rsp
 
         /* Load @regs to RAX. */
@@ -1745,7 +1745,7 @@ SYM_FUNC_START(__vmx_vcpu_run)
         cmpb $0, %bl
 
         /* Load guest registers.  Don't clobber flags. */
-        /*加载guest寄存器*/
+        /* 加载guest寄存器到物理寄存器 */
         mov VCPU_RCX(%_ASM_AX), %_ASM_CX
         mov VCPU_RDX(%_ASM_AX), %_ASM_DX
         mov VCPU_RBX(%_ASM_AX), %_ASM_BX
