--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -1732,7 +1732,7 @@ SYM_FUNC_START(__vmx_vcpu_run)
         mov %_ASM_ARG3B, %bl
 
         /* Adjust RSP to account for the CALL to vmx_vmenter(). */
-        // 调整RSP, 将vcpu寄存器内存地址给rsp
+        // 调整RSP, 将vcpu寄存器内存地址给RSP
         lea -WORD_SIZE(%_ASM_SP), %_ASM_ARG2
         // 此时还未进入guest模式, 会更新host rsp, vmcs_write, 见下面
         call vmx_update_host_rsp
@@ -1779,8 +1779,9 @@ SYM_FUNC_START(__vmx_vcpu_run)
         push %_ASM_AX
 
         /* Reload @regs to RAX. */
+        // RSP存储着vcpu的寄存器内存地址
         mov WORD_SIZE(%_ASM_SP), %_ASM_AX
-        // 保存所有虚拟机寄存器到vcpu
+        // 保存所有vcpu寄存器到vcpu结构, 这个
         /* Save all guest registers, including RAX from the stack */
         __ASM_SIZE(pop) VCPU_RAX(%_ASM_AX)
         mov %_ASM_CX,   VCPU_RCX(%_ASM_AX)
